deployment/prod/frontend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-prod
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-frontend-prod
  template:
    metadata:
      labels:
        app: todo-frontend-prod
    spec:
      # --- Affinity & Anti-Affinity (Giữ nguyên cấu hình cũ của bạn) ---
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - todo-frontend-prod
              topologyKey: "kubernetes.io/hostname"

      # --- Container Configuration ---
      containers:
        - name: todo-frontend
          image: taithanh/todo-frontend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          # Cấu hình tài nguyên (Resource Quota)
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          # [Mount 1] Gắn file config vào container
          volumeMounts:
            - name: config-volume
              # Đường dẫn này cho Nginx container
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js # Quan trọng: Chỉ thay file, không thay folder

      # --- Volumes Definition (Nằm ngang hàng với containers) ---
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config # Tên ConfigMap (Prod)
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: todo-frontend-prod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
