deployment/prod/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter:latest
          ports:
            - containerPort: 9100
              hostPort: 9100
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
            - name: root
              mountPath: /rootfs
              readOnly: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: root
          hostPath:
            path: /
---
# Expose ra NodePort để Cluster 2 có thể gọi vào
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
spec:
  type: NodePort
  selector:
    app: node-exporter
  # Quan trọng: Local giúp đảm bảo gọi vào Node nào thì lấy metrics của đúng Node đó
  externalTrafficPolicy: Local
  ports:
    - port: 9100
      targetPort: 9100
      nodePort: 31091 # Port mở ra cho Cluster 2
      name: metrics
