deployment/prod/stats-service-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
      # Prometheus metrics
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/stats/actuator/prometheus"
        prometheus.io/port: "8082"
    spec:
      # CẤU HÌNH AFFINITY
      affinity:
        #Ưu tiên chạy trên nhóm App(Worker 2, 3)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app
        # Tự động né nhau (preferred - cho phép scale > số nodes)
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - stats-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: stats-service
          image: taithanh/stats-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          # Cấu hình URLs cho service-to-service communication
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          # Health Check
          readinessProbe:
            httpGet:
              path: /stats/actuator/health
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10

---
# Service để expose Stats Service
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: stats-service
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 31082
