deployment/prod/todo-service-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
      # Prometheus metrics (Worker 1 sẽ đọc cái này)
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/todos/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      # --- CẤU HÌNH AFFINITY (QUAN TRỌNG) ---
      affinity:
        # 1. Ưu tiên chạy trên nhóm App (Worker 2, 3)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app

        # 2. Tự động né nhau: "Đừng xếp tôi chung node với một pod backend khác"
        # Kết quả: 1 bản ở Worker 2, 1 bản ở Worker 3
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - todo-service
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: todo-backend
          image: taithanh/todo-backend:v6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # Cấu hình kết nối Database
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

          # Health Check: Chờ Java 30s mới kiểm tra
          readinessProbe:
            httpGet:
              path: /todos/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
# Mở cổng API ra ngoài (NodePort 31080) để Frontend gọi vào
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: todo-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31080
