deployment/prod/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  # Giữ lại các label cũ của k3s để không làm hỏng setup mặc định
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.40.203
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
