deployment/prod/user-service-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
      # Prometheus metrics
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/users/actuator/prometheus"
        prometheus.io/port: "8081"
    spec:
      # --- CẤU HÌNH AFFINITY ---
      affinity:
        # Ưu tiên chạy trên nhóm App (Worker 2, 3)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app

        # Tự động né nhau: mỗi pod ở 1 node khác nhau
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - user-service
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: user-service
          image: taithanh/user-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          # Cấu hình kết nối Database
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"

          # Health Check
          readinessProbe:
            httpGet:
              path: /users/actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10

---
# Service để expose User Service
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 31081
