deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: prod
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /users/api
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /todos/api
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 8080
          - path: /stats/api
            pathType: Prefix
            backend:
              service:
                name: stats-service
                port:
                  number: 8082

          - path: /users/actuator
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /todos/actuator
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 8080
          - path: /stats/actuator
            pathType: Prefix
            backend:
              service:
                name: stats-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-service
                port:
                  number: 80
